/cp 2007-09-27  Paolo Carlini  <pcarlini@suse.de>

PR c++/33493
	* error.c (dump_expr): Deal with DELETE_EXPR and VEC_DELETE_EXPR.
	* cxx-pretty-print.c (pp_cxx_delete_expression): Add missing
	spaces in the formatting.
	* cxx-pretty-print.h (pp_cxx_delete_expression): Declare.

/testsuite
2007-09-27  Paolo Carlini  <pcarlini@suse.de>

	PR c++/33493
	* g++.dg/template/error31.C: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@128831 138bc75d-0d04-0410-961f-82ee72b054a4